[tool.poetry]
name = "subspace"
version = "0.1.0"
description = "cadCAD Design Digital Twin for simulating the Subspace Network economic dynamics."
authors = ["BlockScience"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bokeh = ">=3.3.1"
cadcad = {git = "https://github.com/cadCAD-org/cadCAD"}
holoviews = ">=1.18.0"
hvplot = ">=0.9.1"
ipynbname = ">=2023.2.0.0"
joblib = ">=1.3.2"
panel = ">=1.3.6"
plotly = ">=5.18.0"
pytest = ">=7.4.3"
scipy = ">=1.13.0"
seaborn = ">=0.13.2"
tqdm = ">=4.66.1"
scikit-learn = ">=1.4.2"
jupyterlab = "^4.1.6"
pandera = "^0.18.3"
ipywidgets = "^8.1.2"
click = "^8.1.7"
dask = {extras = ["dataframe"], version = "^2024.5.0"}
boto3 = "^1.34.100"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
